bundle/manifests/tech-preview/block-mg-restricted-namespaces.validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: block-mustgather-restricted-namespaces
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: ["operator.openshift.io"]
        apiVersions: ["v1alpha1"]
        operations: ["CREATE"]
        resources: ["mustgathers"]
  validations:
    - expression: "!object.metadata.namespace.startsWith('openshift-')"
      message: "MustGather resources cannot be created in openshift-* namespaces."
    - expression: "!object.metadata.namespace.startsWith('kube-')"
      message: "MustGather resources cannot be created in kube-* namespaces."
    - expression: "!object.metadata.namespace.startsWith('hypershift-')"
      message: "MustGather resources cannot be created in hypershift-* namespaces."
